hide header nav on print (causes print layout issues)

--- a/packages/components/header/_header.scss
+++ b/packages/components/header/_header.scss
@@ -486,6 +486,7 @@
 
 .nhsuk-navigation-container {
   position: relative;
+  @include print-hide();
 }
 
 // ul of hidden nav
